--- a/.obsidian/snippets/cssclasses.css
+++ b/.obsidian/snippets/cssclasses.css
@@ -1,3 +1,18 @@
+.werkstatt {
+  background-image: linear-gradient(to right, #dddddd 0%, white 10%, white 90%, #dddddd 100%);
+}
+.markdown-reading-view .werkstatt {
+  background-size: 100% 100%;
+  background-position: top 1rem right -2rem;
+  background-image: url('data:image/svg+xml,<svg height="30" width="60" xmlns="http://www.w3.org/2000/svg"><text x="10" y="10" fill="%23F6F6F6">privat</text></svg>');
+}
+.studies {
+  background-image: linear-gradient(to right, white 92%, #cccc90 100%);
+  background-image: linear-gradient(to right, lightgoldenrodyellow 0%, white 3%, white 97%, ivory 100%);
+  background-image: linear-gradient(to right, lemonchiffon 0%, white 3%, white 97%, lemonchiffon 100%);
+  background-image: linear-gradient(to right, khaki 0%, white 3%, white 97%, khaki 100%);
+  background-image: linear-gradient(to right, #cccc90 0%, white 3%, white 97%, #cccc90 100%);
+}
 .bigbiglist h2 {
   border-bottom: 0;
   border-top: 1px solid black;
