--- a/allhelperfiles/pointobsidian/snippets/obuntu_adapt.css
+++ b/allhelperfiles/pointobsidian/snippets/obuntu_adapt.css
@@ -1,14 +1,82 @@
+/* Reihenfolge mit Webpage HTML Export
+ * snippets
+ * obsidian
+ * theme
+ * global-variable-styles
+ * main-styles
+ *
+ * Snippets enthält alle meine Obsidian styles in unbekannter Reihenfolge
+ * mal so, mal so
+ * obsidian-source-view.css: ist egal, das wirkt nicht im Export
+ * timeline.css: passe ich hier an, kein !important, da nix überschrieben wird 
+ *
+ * */
+#cssfile_obuntu_adapt { color: blue; }
+body {
+  --link-decoration: none; /* für interne links */
+  --link-decoration-hover: none; /* für interne links */
+}
 .theme-dark {
-  --link-decoration: none;
-  --link-decoration-hover: none;
+  /* Meine Variablen */
+  --red-bg: #4c050f;
+  --yellow-bg: #44420e;
+  --green-bg: #1a4217;
+  --blue-bg: #141b52;
+  --grey-bg: rgba(0, 0, 0, .7);
+  --color-bg:#333;
+  --color-bg-sec:#555;
+  --color-fg:#73BF9C;
+  --color-hv:#96cfb4;
+  --color-fg-light-a:#73BF9C;
+  --color-fg-light-b:#73BF9C;
+  --color-strong:green;
+  --color-mild:blue;
+  /* Obuntu Variablen, einige von mir überschrieben */
+  --text-accent: var(--color-fg) !important;
+  --link-external-color: var(--color-fg);
+  --link-color: var(--color-fg);
+  --interactive-accent: var(--color-fg) !important;
+  --text-highlight-bg: var(--color-fg) !important;
+  --text-accent-hover: var(--color-hv) !important;
+  --text-selection: var(--color-fg-light-b) !important;
+  --text-highlight-bg: var(--color-fg) !important;
+  --interactive-accent: var(--color-fg) !important;
+  --interactive-accent-rgb: var(--color-hv) !important;
+  --interactive-accent-hover: var(--color-hv) !important;
+  --accent-strong: var(--color-strong) !important;
+  --accent-mild: var(--color-mild) !important;
 }
 .theme-light {
+  /* Meine Variablen */
+  --red-bg: rgba(255, 0, 0, .04);
+  --yellow-bg: rgba(255, 255, 0, .05);
+  --green-bg: rgba(0, 255, 0, .03);
+  --blue-bg: rgba(214, 233, 255, .3);
+  --grey-bg: rgba(0, 0, 0, .03);
+  --color-bg:#fff;
+  --color-bg-sec:#eee;
   --color-fg:#50af83;
   --color-hv:#50df83;
   --color-fg-light-a: rgba(80,175,131,0.9);
   --color-fg-light-b: rgba(80,175,131,0.8);
   --color-strong:#30694e;
   --color-mild:#bac22f;
+}
+body {
+  /* Obuntu Variablen, einige von mir überschrieben */
+  --background-secondary: var(--color-bg-sec) !important;
+  --background-secondary-alt: var(--color-bg-sec) !important;
+  --text-accent: var(--color-fg) !important;
+  --text-accent-hover: var(--color-hv) !important;
+  --text-selection: var(--color-fg-light-b) !important;
+  --text-highlight-bg: var(--color-fg) !important;
+  --interactive-accent: var(--color-fg) !important;
+  --interactive-accent-rgb: var(--color-hv) !important;
+  --interactive-accent-hover: var(--color-hv) !important;
+  --accent-strong: var(--color-strong) !important;
+  --accent-mild: var(--color-mild) !important;
+
+
   --background-primary: #fff;
   --background-primary-alt: #dedede;
   --background-secondary: #dedede;
@@ -53,16 +121,10 @@
   --link-decoration: none;
   --link-decoration-hover: none;
 }
-/* Damit das Plugin "Webpage HTML Export" den Dateinamen nicht als H1 anzeigt */
-.page-title  {
-  display:none;
-}
-.theme-light code {
-  color: var(--color-fg) !important;
-}
-.theme-light .tag {
-  background: var(--color-fg);
-}
+/* Webpage HTML Export */.page-title  { display:none; } /* Dateinamen nicht anzeigen */
+
+code { color: var(--color-fg) !important; }
+.tag { background: var(--color-fg) !important; color: var(--color-bg) !important;}
 p {
  margin-bottom: 0.4rem !important;
  margin-top: 0.0rem !important;
@@ -87,74 +149,19 @@ h6 {
     display: none;
 }
 
-
-[data-callout="timeline"] {
-  margin: 0 !important;
-  padding: 0 !important;
+/*******************************************************************************
+ * timeline
+ * background und link farbe ist in timeline.css nicht gesetzt, so kein important
+ *******************************************************************************/
+body {
+  [data-callout-metadata=red] .callout-content { background: var(--red-bg) }
+  [data-callout-metadata=yellow] .callout-content { background: var(--yellow-bg) }
+  [data-callout-metadata=green] .callout-content { background: var(--green-bg) }
+  [data-callout-metadata=blue] .callout-content { background:  var(--blue-bg) }
+  [data-callout-metadata=grey] .callout-content { background: var(--grey-bg) }
 }
-
-.theme-light [data-callout="timeline"] {
-  background-color: white !important;
-}
-
-.theme-light [data-callout-metadata=blue] .callout-content {
-  background-color: rgba(214, 233, 255, .3) !important
-}
-
-.theme-light [data-callout-metadata=green] .callout-content {
-  background-color: rgba(0, 255, 0, .03) !important
-}
-
-.theme-light [data-callout-metadata=red] .callout-content {
-  background-color: rgba(255, 0, 0, .04) !important
-}
-
-.theme-light [data-callout-metadata=yellow] .callout-content {
-  background-color: rgba(255, 255, 0, .05) !important
-}
-
-.theme-light [data-callout-metadata=grey] .callout-content {
-  background-color: rgba(0, 0, 0, .03) !important
-}
-
-.theme-dark [data-callout-metadata=blue] .callout-content {
-  background-color: #141b52 !important
-}
-
-.theme-dark [data-callout-metadata=green] .callout-content {
-  background-color: #1a4217 !important
-}
-
-.theme-dark [data-callout-metadata=red] .callout-content {
-  background-color: #4c050f !important
-}
-
-.theme-dark [data-callout-metadata=yellow] .callout-content {
-  background-color: #44420e !important
-}
-
-.theme-dark [data-callout-metadata=grey] .callout-content {
-  background-color: rgba(0, 0, 0, .7) !important
-}
-
-.theme-dark [data-callout-metadata=blue] .callout-content a {
-  color: white !important
-}
-
-.theme-dark [data-callout-metadata=green] .callout-content a {
-  color: white !important
-}
-
-.theme-dark [data-callout-metadata=red] .callout-content a {
-  color: white !important
-}
-
-.theme-dark [data-callout-metadata=yellow] .callout-content a {
-  color: white !important
-}
-
-.theme-dark [data-callout-metadata=grey] .callout-content a {
-  color: white !important
+.theme-dark {
+  [data-callout="timeline"] .callout-content a { color: white; }
 }
 
 
